# RTypeMirror

./: .gitignore  .gitmodules  ASystem_8hpp_source.html  BackgroundMouvement_8hpp_source.html  Bonus_8hpp_source.html  BulletMouvement_8hpp_source.html  Bullet_8hpp_source.html  CMakeLists.txt  ChangeTexture_8hpp_source.html  Color_8hpp_source.html  Communication_8hpp_source.html  Component_8hpp_source.html  Core_8hpp_source.html  Doxyfile  ECS_8hpp_source.html  EntitiesManager_8hpp_source.html  Entity_8hpp_source.html  Enum_8hpp_source.html  EventManager_8hpp_source.html  Factory_8hpp_source.html  Game_8hpp_source.html  Graph_8hpp_source.html  IComponent_8hpp_source.html  ISystem_8hpp_source.html  Makefile  Message_8hpp_source.html  Mouvement_8hpp_source.html  Musics_8hpp_source.html  Parser_8hpp_source.html  Position_8hpp_source.html  R-TYPE_RFC.txt  R-TYPE_RFC_V1.odt  R-TYPE_RFC_V1.txt  README.md  RFC.html  RFC.txt  RlAudio_8hpp_source.html  RlColor_8hpp_source.html  RlDraw_8hpp_source.html  RlFont_8hpp_source.html  (+249 more)
.github/workflows/: build.yml  documentation.yml  mirror.yml  release.yml  rtype.yml
assets/: map.json  test.json
docs/: Bonus_8hpp_source.html  Bullet_8hpp_source.html  EntitiesManager_8hpp_source.html  Enum_8hpp_source.html  EventManager_8hpp_source.html  IComponent_8hpp_source.html  Parser_8hpp_source.html  Raylib_8hpp_source.html  RlDraw_8hpp_source.html  RlTime_8hpp_source.html  RlWindow_8hpp_source.html  Server_8hpp_source.html  Ship_8hpp_source.html  SystemManager_8hpp_source.html  TransformPath_8hpp_source.html  UpdateMusic_8hpp_source.html  Weapon_8hpp_source.html  classArgs-members.html  classArgs.html  classClient-members.html  classClient.html  classClient_1_1Args-members.html  classClient_1_1Args.html  classClient_1_1UDPClient-members.html  classClient_1_1UDPClient.html  classECS_1_1ASystem__inherit__graph.dot  classECS_1_1BackgroundMouvement__coll__graph.dot  classECS_1_1BulletMouvement-members.html  classECS_1_1ChangeTexture__inherit__graph.dot  classECS_1_1Component-members.html  classECS_1_1Component__inherit__graph.dot  classECS_1_1EventManager-members.html  classECS_1_1Factory.html  classECS_1_1IComponent-members.html  classECS_1_1IComponent.html  classECS_1_1ISystem.html  classECS_1_1ISystem__inherit__graph.dot  classECS_1_1Musics-members.html  classECS_1_1Musics__inherit__graph.dot  classECS_1_1Sounds-members.html  (+88 more)
docs/search/: all_0.js  all_10.js  all_3.js  all_5.js  all_6.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_2.js  classes_4.js  classes_7.js  classes_9.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  functions_3.js  functions_6.js  functions_8.js  functions_9.js  namespaces_0.js  namespaces_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_4.js  typedefs_7.js  typedefs_9.js  typedefs_a.js
html/: Core_8hpp_source.html  ECS_8hpp_source.html  EntitiesManager_8hpp_source.html  Entity_8hpp_source.html  Enum_8hpp_source.html  EventManager_8hpp_source.html  Factory_8hpp_source.html  Graph_8hpp_source.html  Parser_8hpp_source.html  Raylib_8hpp_source.html  RlAudio_8hpp_source.html  RlColor_8hpp_source.html  RlDraw_8hpp_source.html  RlFont_8hpp_source.html  RlInputs_8hpp_source.html  RlMusic_8hpp_source.html  RlScreen_8hpp_source.html  RlSound_8hpp_source.html  RlText_8hpp_source.html  RlTexture_8hpp_source.html  RlWindow_8hpp_source.html  Server_8hpp_source.html  SystemManager_8hpp_source.html  annotated.html  classArgs-members.html  classArgs.html  classClient-members.html  classClient.html  classECS_1_1Core-members.html  classECS_1_1Core.html  classECS_1_1EntitiesManager-members.html  classECS_1_1EntitiesManager.html  classECS_1_1EventManager-members.html  classECS_1_1EventManager.html  classECS_1_1Factory.html  classECS_1_1SystemManager-members.html  classECS_1_1SystemManager.html  classGraph-members.html  classGraph.html  classParser_1_1ParserException-members.html  (+36 more)
html/search/: all_0.js  (+28 more)
levels/: level_1.json  level_1.txt
resources/: UML.mdj
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+23 more)
src/: ECS.hpp  Enum.hpp  Parser.cpp  Parser.hpp  TransformPath.cpp  TransformPath.hpp  index.cpp  main.cpp
src/client/: Args.cpp  Args.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ECS.hpp  Enum.hpp  Raylib.hpp  client.cpp  client.hpp  main.cpp
src/client/ECS/: Core.cpp  Core.hpp  EntitiesManager.cpp  EntitiesManager.hpp  Entity.cpp  Entity.hpp  EventManager.cpp  EventManager.hpp  Factory.cpp  Factory.hpp  Graph.cpp  Graph.hpp  SystemManager.cpp  SystemManager.hpp
src/client/ECS/components/: Component.cpp  Component.hpp  IComponent.hpp  Musics.hpp  Position.hpp  Sounds.hpp  Sprite.hpp  Texture.hpp  Weapon.hpp
src/client/ECS/systems/: ASystem.cpp  ASystem.hpp  BackgroundMouvement.cpp  BackgroundMouvement.hpp  BulletMouvement.cpp  BulletMouvement.hpp  ChangeTexture.cpp  ChangeTexture.hpp  ISystem.hpp  Mouvement.cpp  Mouvement.hpp  Shoot.cpp  Shoot.hpp  UpdateMusic.cpp  UpdateMusic.hpp  UpdatePosGun.cpp  UpdatePosGun.hpp
src/client/Raylib/: RlAudio.cpp  RlAudio.hpp  RlColor.cpp  RlColor.hpp  RlDraw.cpp  RlDraw.hpp  RlFont.hpp  RlInputs.cpp  RlInputs.hpp  RlMusic.cpp  RlMusic.hpp  RlScreen.hpp  RlSound.cpp  RlSound.hpp  RlSprite.cpp  RlSprite.hpp  RlText.cpp  RlText.hpp  RlTexture.cpp  RlTexture.hpp  RlTime.hpp  RlWeapon.cpp  RlWeapon.hpp  RlWindow.hpp
src/server/: Args.cpp  Args.hpp  CMakeLists.txt  Client.cpp  Client.hpp  GameGestion.cpp  GameGestion.hpp  Server.cpp  Server.hpp  main.cpp  server.cpp  server.hpp
src/server/game/: Bonus.cpp  Bonus.hpp  Bullet.cpp  Bullet.hpp  Game.cpp  Game.hpp  Ship.cpp  Ship.hpp
(+66 files in other folders)
